--- a/src/AngularJSSample/Views/Home/Index.cshtml
+++ b/src/AngularJSSample/Views/Home/Index.cshtml
@@ -24,8 +24,10 @@
 </head>
 <body>
   <ul class="menu">
-    <li><a href="#!/view1">view1</a></li>
-    <li><a href="#!/view2">view2</a></li>
+     <li><a href="#!/view2">Home</a></li>
+    <li><a href="#!/view1">Emotions</a></li>
+    <li><a href="#!/view3">Time</a></li>
+      <li><a href="#!/view4">Webcam</a></li>
   </ul>
 
   <!--[if lt IE 7]>
@@ -47,6 +49,8 @@
   <script src="~/view1/view1.js"></script>
   <script src="~/services/webcam.js"></script>
   <script src="~/view2/view2.js"></script>
+    <script src="~/view3/view3.js"></script>
+    <script src="~/view4/view4.js"></script>
   <script src="~/main-graph/main-graph.js"></script>
   <script src="~/overall-satisfaction/overall-satisfaction.js"></script>
   <script src="~/highlight-flags/highlight-flags.js"></script>
