--- a/src/AngularJSSample/wwwroot/app.css
+++ b/src/AngularJSSample/wwwroot/app.css
@@ -34,14 +34,15 @@
   padding-left:20px;
 }
 .center-header {
-    
+    width: 376px;
     text-transform: uppercase;
     font-size: 32px;
     color: white;
     position: relative;
-    top: -353px;
+    top: -400px;
     left: 0;
     text-align: center;
+    margin: auto;
 }
 .view{
   background:#22222c;
