--- a/src/AngularJSSample/Views/Home/Index.cshtml
+++ b/src/AngularJSSample/Views/Home/Index.cshtml
@@ -23,12 +23,18 @@
   <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
 <body>
-  <ul class="menu">
-     <li><a href="#!/view2">Home</a></li>
-    <li><a href="#!/view1">Emotions</a></li>
-    <li><a href="#!/view3">Time</a></li>
-      <li><a href="#!/view4">Webcam</a></li>
-  </ul>
+    <div class="col-md-8">
+        <ul class="menu">
+            <li><a href="#!/view2">Home</a></li>
+            <li><a href="#!/view1">Emotions</a></li>
+            <li><a href="#!/view3">Time</a></li>
+            <li><a href="#!/view4">Webcam</a></li>
+        </ul>
+    </div>
+    <div class="col-md-4 text-right">
+        <img style="width:200px;" src="~/assets/logo.png" />
+    </div>
+    
 
   <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
